# AGS

./: .gitignore  .gitmodules  CMakeLists.txt
internal/: Conventions.md
internal/AGS/: CMakeLists.txt
internal/AGS/src/: AGS_main.cpp  Engine.cpp  Engine.hpp  Main.cpp
internal/AGS_core/: CMakeLists.txt
internal/AGS_core/include/ags/: Enums.hpp  Graphics_includes.hpp  Logging.hpp  Types.hpp  Util.hpp  Vulkan_core.hpp  Window_core.hpp
internal/AGS_core/src/: AGS_types.cpp  Core.cpp  Core.hpp  Logging.cpp  Types.cpp  Util.cpp  Vulkan_context.cpp  Vulkan_context.hpp  Windowing_context.cpp  Windowing_context.hpp
internal/AGS_core/src/resources/: Image.hpp  Resource.hpp
internal/APT/: CMakeLists.txt
internal/APT/include/ags/apt/: APT.hpp
internal/APT/plans/: Materials.md  Shaders.md
internal/APT/src/: Camera.hpp  Common.hpp  Intersection.cpp  Intersection.hpp  LBVH.cpp  LBVH.hpp  Random.cpp  Random.hpp  Render.cpp  Render.hpp  Render_settings.hpp  Sampling.cpp  Sampling.hpp  Scene.cpp  Scene.hpp  Shapes.hpp  Window_functions.cpp  Window_functions.hpp
internal/APT/src/kernel/cuda/: CMakeLists.txt  Kernel_dispatch.cu  Kernel_dispatch.cuh
internal/APT/src/optics/: Optics.cpp  Optics.hpp
internal/APT/src/scene/: Scene.hpp
internal/APT/tests/: APT_tests.cpp  CMakeLists.txt  Instersection_tests.hpp  LBVH8_tests.hpp
internal/ARE/: CMakeLists.txt  Conventions.md  Render queue submission.md
internal/ARE/include/ags/: ARE.hpp
internal/ARE/plans/: Kernel.md  Multi-threading.md  Resource_management.md  Resources.md
internal/ARE/plans/vulkan/: Devices.md  Queue_families.md
internal/ARE/src/: ARE.cpp  ARE.hpp  Settings.hpp
internal/ARE/src/batching/: Batch.cpp  Batch.hpp
internal/ARE/src/kernel/: Enums.cpp  Enums.hpp  Enums_common.cpp  Enums_common.hpp  Framebuffer.hpp  Framebuffer_common.hpp  Uniform_block.cpp  Uniform_block.hpp
internal/ARE/src/kernel/opengl/: Array_texture.cpp  Array_texture.hpp  CMakeLists.txt  Compute_queue.cpp  Compute_queue.hpp  Cubemap.cpp  Cubemap.hpp  Draw_call.cpp  Draw_call.hpp  Enums.cpp  Enums.hpp  Framebuffer.cpp  Framebuffer.hpp  Framebuffer_kerenel.cpp  Framebuffer_kernel.cpp  Framebuffer_kernel.hpp  Includes.hpp  Kernel.cpp  Kernel.hpp  Kernel_base.cpp  Kernel_base.hpp  Mesh.cpp  Mesh.hpp  Mesh_kernel.cpp  Mesh_kernel.hpp  Object.cpp  Object.hpp  Render_queue.cpp  Render_queue.hpp  Sampler.cpp  Sampler.hpp  Shader.cpp  Shader.hpp  Shader_kernel.cpp  Shader_kernel.hpp  Texture.cpp  Texture.hpp  Texture_kernel.cpp  Texture_kernel.hpp  Uniform_block.hpp  (+2 more)
internal/ARE/src/kernel/vulkan/: CMakeLists.txt  Device.cpp  Device.hpp  Device_kernel.cpp  Device_kernel.hpp  Draw_call.cpp  Draw_call.hpp  Enum.cpp  Enum.hpp  Enums.cpp  Enums.hpp  Framebuffer.cpp  Framebuffer.hpp  Framebuffer_kernel.cpp  Framebuffer_kernel.hpp  Includes.hpp  Kernel.cpp  Kernel.hpp  Kernel_base.cpp  Kernel_base.hpp  Memory_kernel.cpp  Memory_kernel.hpp  Mesh.cpp  Mesh.hpp  Mesh_kernel.cpp  Mesh_kernel.hpp  Render_pass.cpp  Render_pass.hpp  Render_queue.cpp  Render_queue.hpp  Render_queue_kernel.cpp  Render_queue_kernel.hpp  Shader.cpp  Shader.hpp  Shader_kernel.cpp  Shader_kernel.hpp  Texture.cpp  Texture.hpp  Texture_kernel.cpp  Texture_kernel.hpp
internal/ARE/src/materials/: Node_tree.hpp  Note_tree.cpp  Shader_generation.cpp  Shader_generation.hpp
internal/ARE/src/shading/: Fragment_shader.hpp  Shading.cpp  Shading.hpp  Vertex_shader.hpp
internal/geometry/: CMakeLists.txt
internal/geometry/src/: AABB3f.cpp  AABB3f.hpp
internal/image/: CMakeLists.txt
internal/image/include/ags/image/: Canvas.hpp  Dynamic_pixel_buffer.hpp  IMG_canvas.hpp  IMG_image.hpp  IMG_operations.hpp  IMG_pixel_buffer.hpp  IMG_virtual_canvas.hpp  IO.hpp  Image.hpp  Normal_maps.hpp  Operations.hpp  Pixel_buffer.hpp  Virtual_canvas.hpp
internal/image/plans/: Virtual_canvas.md
internal/image/src/: IMG_image.cpp  IO.cpp  Image.cpp
internal/image/tests/: CMakeLists.txt  Image_tests.cpp  Pixel_buffer_tests.hpp
internal/mesh/: CMakeLists.txt
internal/mesh/include/ags/: Mesh.hpp
internal/mesh/include/ags/mesh/: Attribute.hpp  Dynamic_vertex_array.hpp  IO.hpp  Triangle_graph.hpp  Vertex_array.hpp
internal/mesh/plans/: Mesh.md
internal/mesh/src/: Attribute.cpp  Dynamic_vertex_array.cpp  Dynamic_vertex_array.hpp  IO.cpp  Static_vertex_array.hpp  Triangle_graph.cpp  Triangle_strip_mesh.hpp  Vertex_array.cpp  Vertex_array.hpp
internal/paint/: CMakeLists.txt
internal/paint/src/: Common.hpp  Types.hpp
internal/paint/src/brush/: Brush.cpp  Brush.hpp
internal/paint/src/stroke_engine2d/: Stroke_settings.hpp
internal/paint/src/stroke_engine3d/: Stroke_settings.hpp
internal/paint/src/tile_identification/: Tile_identifier.cpp  Tile_identifier.hpp
internal/paint/src/triangle_identification/: Projection_cache.cpp  Projection_cache.hpp
internal/scene/src/: Camera.hpp  Mesh.hpp  Object.hpp  Scene.hpp  Shader.hpp  Transform.hpp
internal/threading/: CMakeLists.txt
internal/threading/include/ags/: Threading.hpp
internal/threading/include/ags/threading/: Locked_queue.hpp  Threading.hpp
internal/threading/src/: Task.hpp  Thread_pool.hpp  Work_sharing_thread_pool.cpp  Work_sharing_thread_pool.hpp  Work_stealing_thread_pool.hpp
internal/threading/src/containers/: Circular_array.hpp
internal/threading/tests/: CMakeLists.txt  Threading_tests.cpp  Work_sharing_thread_pool_tests.hpp
internal/threading/tests/containers/: Locked_queue_tests.hpp
internal/ui/: CMakeLists.txt
internal/ui/plans/: UI_engine.md
internal/ui/src/: Monitor.cpp  Monitor.hpp  Window.cpp  Window.hpp
internal/ui/src/components/: Component.hpp
internal/ui/src/input/: Input_event.hpp  Key_event.hpp  Key_map.hpp  Mouse_event.hpp
internal/ui/src/kernel/: Shapes.hpp  (+2 more)
internal/voxel/: CMakeLists.txt
internal/voxel/include/ags/voxel/: Voxel_canvas.hpp
internal/voxel/plans/: Chunked_volume.md
internal/voxel/src/: VOX_chunked_volume.cpp  VOX_chunked_volume.hpp  Voxel_canvas.cpp
internal/windowing/: CMakeLists.txt
internal/windowing/src/: Windowing_context.cpp  Windowing_context.hpp
(+14 files in other folders)
